src/objects/Class_Site_Login_Attempt__c.object
<CustomObject>
    <description>Created by 501 Commons in 2019. 

Tracks logins to the Class Registration Site.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the account that attempted to log in.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Class Site Login Attempts</relationshipLabel>
        <relationshipName>Class_Site_Login_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Sent_To__c</fullName>
        <inlineHelpText>The Phone Number or Email Address the confirmation code was sent to.</inlineHelpText>
        <label>Code Sent To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Attempts__c</fullName>
        <label>Login Attempts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Login_IP_Address__c</fullName>
        <inlineHelpText>IP Address of the Login Attempt</inlineHelpText>
        <label>Login IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Timestamp__c</fullName>
        <label>SMS Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secret_Code__c</fullName>
        <label>Secret Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If verified, the user can use the system</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Class Site Login Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Login_IP_Address__c</columns>
        <columns>Code_Sent_To__c</columns>
        <columns>Secret_Code__c</columns>
        <columns>SMS_Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Class Site Login Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Site Login Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>